# Physical-AI-Humanoid-Robotics-TextBook

./: .env.example  .gitignore  404.html  PROJECT_OVERVIEW.md  README.md  app.py  index.html  pyproject.toml  sitemap.xml  tasks.md  test_app.py  validate_implementation.py
.claude/: settings.local.json
.specify/memory/: constitution.md
assets/css/: styles.54797493.css  styles.a5af11bd.css
assets/js/: 0058b4c6.8b971421.js  0854853f.ec4100d5.js  0bb51088.274351c8.js  0bb51088.cd6d1634.js  0d40900e.0e42879e.js  0d40900e.307c18de.js  0e384e19.7508afad.js  0e384e19.be033fee.js  110cb7af.54f7e6b2.js  110cb7af.e88c7c1e.js  152b8eec.d74482fb.js  152b8eec.fbe2f8ee.js  17896441.5fc65576.js  1c3c15fc.30f60179.js  1c3c15fc.628770e7.js  1df93b7f.64ca0747.js  30fd0c14.1883aed8.js  30fd0c14.e265a91f.js  4b6eb6b6.b7bd8c31.js  4b6eb6b6.c0f5ea19.js  525eae05.00716728.js  525eae05.b8e690a4.js  541ae241.0a8a1074.js  541ae241.4b6ef15f.js  5bddbb8c.83143e5f.js  5bddbb8c.b9c45d40.js  62d831a0.9f1f0ee2.js  62d831a0.ae296349.js  62da5d4f.9fd1d58e.js  62da5d4f.a132ca15.js  649ed0d4.11d1121f.js  649ed0d4.981fc383.js  713a1867.3f8983ba.js  713a1867.b0535890.js  71944bb1.311d6b9f.js  71944bb1.d8fb4bb1.js  7e6da90e.331d229a.js  7e6da90e.724d1607.js  852e62fe.79ebd61f.js  852e62fe.cc667d49.js  (+36 more)
backend/: README.md  start_server.py
backend/src/: README.md  __init__.py  main.py
docs/intro/: index.html
frontend/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend/docs/: intro.md
hf_space/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  app.py  requirements.txt  run.py  space.yaml
history/adr/: adr-1-humanoid-robotics-educational-architecture.md
tests/: __init__.py  test_imports.py  test_rag_api.py  test_services.py
(+260 files in other folders)
